--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </head>
   <body>
-    <form method="post" name="form" target="dummy" action="後述の8.でデプロイしたウェブアプリのURL">
+    <form method="post" name="form" target="dummy" action="">
       <fieldset>
         <div class="container">
           <div class="row">
