--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./index.js"></script>
   </head>
   <body>
-    <form method="post" name="form" target="dummy" action="">
+    <form method="post" name="form" target="dummy" action="https://mika05048123.github.io/isbn-to-notion.github.io/">
       <fieldset>
         <div class="container">
           <div class="row">
