--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <script src="./index.js"></script>
   </head>
   <body>
-    <form method="post" name="form" target="dummy" action="">
-      <fieldset>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-8">
-              <h3 class="mt-5">
-                Send To Notion<br>
-                <small class="text-muted">本のバーコードを読んでNotionに追加</small>
-              </h3>
-              <div><canvas id="preview"></canvas></div> <!--quaggaJSのカメラがここに表示される-->
-              <label class="col-form-label" for="inputDefault">ISBN:</label> <!--quaggaJSでバーコードから読み取ったISBNがここに入力される-->
-              <input type="text" name="isbn" id="ISBN" class="form-control"><br>
-              <button type="submit" onclick="GetData();" class="btn btn-primary">データ取得</button><br>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8">
+          <h3 class="mt-5">
+            Send To Notion<br>
+            <small class="text-muted">本のバーコードを読んでNotionに追加</small>
+          </h3>
+          <div><canvas id="preview"></canvas></div> <!--quaggaJSのカメラがここに表示される-->
+          <label class="col-form-label" for="inputDefault">ISBN:</label> <!--quaggaJSでバーコードから読み取ったISBNがここに入力される-->
+          <input type="text" name="isbn" id="ISBN" class="form-control"><br>
+          <button onclick="GetData();" class="btn btn-primary">データ取得</button><br>
+          <form method="post" name="form" target="dummy" action="">
+            <fieldset>
               <img src="" id="imagePlace"><br>
               <label class="col-form-label" for="inputDefault">画像URL</label> <!--画像URLを取得したらsrcを設定する-->
               <input type="text" name="imageSrc" id="imageSrc" class="form-control"><br>
@@ -35,10 +35,10 @@
               <label class="col-form-label" for="inputDefault">ページ数</label>
               <input type="text" name="pageCount" id="pageCount" class="form-control"><br>
               <button type="submit" class="btn btn-primary">Notionに送信</button><br>
-            </div>
-          </div>
+            </fieldset>
+          </form>
         </div>
-      </fieldset>
-    </form>
+      </div>
+    </div>
   </body>
 </html>
